--- a/style.css
+++ b/style.css
@@ -133,16 +133,6 @@ body {
     font-size: 13px;
 }
 
-/* 
-.update{
-    position: absolute;
-    top: 0;
-    left: 0;
-    display: flex;
-    align-items: center;
-    user-select: none;
-    width: 100%;  
-    bottom: 3.5em;
-    font-size: 13px;
-
-} */
+a{
+    color: green;
+}
