--- a/part2/land-style.css
+++ b/part2/land-style.css
@@ -144,3 +144,13 @@ body {
     margin-top: 40px;
     /* border: 2px solid #ffffff; */
 }
+
+/* Section */
+
+.section{
+    padding: 80px 0;
+}
+
+.section__header{
+    
+}
