--- a/part2/land-style.css
+++ b/part2/land-style.css
@@ -1,14 +1,18 @@
-@import url(https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@700&display=swap);
-@import url(https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap);
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300;700&display=swap');
+
 * {
     font-family: 'Open Sans', 'sans-serif', 'Open Sans Condensed';
     box-sizing: border-box;
-    color: #ffffff;
+    /* color: #ffffff; */
 }
 
 body {
     margin: 0;
     display: block;
+}
+
+h2,h3,p{
+    margin: 0;
 }
 
 /* Container */
@@ -23,7 +27,6 @@ body {
 
 .header {
     width: 100%;
-    max-width: 1100px;
     position: absolute;
     top: 0;
     left: 0;
@@ -34,14 +37,14 @@ body {
 
 .header-inner {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
 }
 
 /* Navigation */
 
 .nav {
-    font-size: 18px;
+    font-size: 16px;
     text-transform: uppercase;
 }
 
@@ -53,8 +56,8 @@ body {
     display: inline-block;
     vertical-align: top;
     margin: 0 10px;
-    font-weight: 700;
-    letter-spacing: 1.5px;
+    font-weight: 300;
+    letter-spacing: 2px;
     position: relative;
 }
 
@@ -118,11 +121,13 @@ body {
     max-width: 540px;
     width: 100%;
     text-align: left;
+    color: #ffffff;
 }
 
 .intro__title {
     font-size: 32px;
-    font-weight: 700;
+    font-weight: 600;
+    padding-bottom: 10px;
 }
 
 .intro__info {
@@ -139,18 +144,58 @@ body {
     padding: 10px 30px;
     font-size: 18px;
     font-weight: 700;
+    color: #ffffff;
     background-color: rgba(209, 169, 84, 1);
+    letter-spacing: 1.5px;
     text-decoration: none;
+    transition: background-color .2s linear;
     margin-top: 40px;
     /* border: 2px solid #ffffff; */
 }
 
-/* Section */
-
-.section{
-    padding: 80px 0;
+.button:hover {
+    background-color: rgb(238, 161, 18);
 }
 
-.section__header{
-    
+/* Section */
+
+.section__container {
+    width: 100%;
+    max-width: 1100px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+
+}
+
+.section {
+    padding: 80px 0;
+    background-color: #333333;
+    color: #ffffff;
+    /* letter-spacing: 1.2px; */
+}
+
+.section__header {
+    width: 100%;
+    margin: 0 auto 40px;
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 25px;
+}
+
+.section__main {
+    width: 100%;
+    max-width: 445px;
+}
+
+.section__container>*:not(:first-child) {
+    margin-left: 10px;
+
+}
+
+.section__main.title {
+    text-transform: uppercase;
+    font-size: 20px;
+    font-weight: 700;
+    letter-spacing: 1.3px;
 }
