--- a/part2/land-style.css
+++ b/part2/land-style.css
@@ -1,5 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300;700&display=swap');
-
 * {
     font-family: 'Open Sans', 'sans-serif', 'Open Sans Condensed';
     box-sizing: border-box;
@@ -11,8 +10,13 @@ body {
     display: block;
 }
 
-h2,h3,p{
+img {
     margin: 0;
+}
+
+h2, h3, p {
+    margin: 0;
+    font-weight: 300;
 }
 
 /* Container */
@@ -83,6 +87,25 @@ h2,h3,p{
 
 .nav__link:hover:after {
     opacity: 1;
+}
+
+/* Fixed panel */
+
+.fixed-panel{
+    display: flex;
+    flex-direction: column-reverse;
+    overflow: visible;
+    padding: 50px;
+}
+/* !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! */
+.fixed-panel-icons{
+    display: inline-block;
+    transform: none;
+}
+
+.title-panel{
+    writing-mode: vertical-rl;
+    transform: rotate(180deg);
 }
 
 /* .fixed-panel {
@@ -162,10 +185,9 @@ h2,h3,p{
 .section__container {
     width: 100%;
     max-width: 1100px;
-    margin: 0 auto;
+    margin: auto;
     display: flex;
     justify-content: space-between;
-
 }
 
 .section {
@@ -180,22 +202,65 @@ h2,h3,p{
     margin: 0 auto 40px;
     text-align: center;
     text-transform: uppercase;
-    font-size: 25px;
+    font-size: 35px;
+    font-weight: 300;
+    padding-bottom: 15px;
 }
 
 .section__main {
     width: 100%;
-    max-width: 445px;
+    /* max-width: 445px; */
+}
+
+.section__main.center {
+    max-width: 250px;
+}
+
+.section__main.image {
+    margin-right: 0;
 }
 
 .section__container>*:not(:first-child) {
     margin-left: 10px;
+}
 
+.section__container>*:not(:last-child) {
+    margin-right: 15px;
 }
 
 .section__main.title {
     text-transform: uppercase;
-    font-size: 20px;
+    font-size: 24px;
     font-weight: 700;
     letter-spacing: 1.3px;
+    padding-bottom: 10px;
+}
+
+.section__main.text {
+    line-height: 1.3;
+    /* font-size: 20px; */
+}
+
+.section__ico {
+    padding: 10px;
+}
+
+.section__container__three {
+    margin: auto;
+    width: 100%;
+    max-width: 1770px;
+    padding: 0;
+    display: flex;
+    flex-direction: row;
+}
+
+.lens{
+    vertical-align: middle;
+}
+
+.section__container.four{
+    width: 100%;
+    max-width: 1100px;
+    display: flex;
+    align-items: center;
 }
