--- a/part2/land-style.css
+++ b/part2/land-style.css
@@ -2,20 +2,13 @@
 * {
     font-family: 'Open Sans', 'sans-serif', 'Open Sans Condensed';
     box-sizing: border-box;
-    /* color: #ffffff; */
 }
 
-body {
-    margin: 0;
-    display: block;
-}
-
-img {
+body, img, h2, h3, p {
     margin: 0;
 }
 
 h2, h3, p {
-    margin: 0;
     font-weight: 300;
 }
 
@@ -27,7 +20,7 @@ h2, h3, p {
     margin: 0 auto;
 }
 
-/* Header */
+/* Header menu */
 
 .header {
     width: 100%;
@@ -39,7 +32,7 @@ h2, h3, p {
     padding-top: 40px;
 }
 
-.header-inner {
+.header__inner {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -53,6 +46,7 @@ h2, h3, p {
 }
 
 .nav__link {
+    position: relative;
     text-decoration: none;
     color: white;
     cursor: pointer;
@@ -62,7 +56,6 @@ h2, h3, p {
     margin: 0 10px;
     font-weight: 300;
     letter-spacing: 2px;
-    position: relative;
 }
 
 .nav__link:after {
@@ -91,19 +84,21 @@ h2, h3, p {
 
 /* Fixed panel */
 
-.fixed-panel{
+.fixed-panel {
     display: flex;
     flex-direction: column-reverse;
     overflow: visible;
     padding: 50px;
 }
+
 /* !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! */
-.fixed-panel-icons{
+
+.fixed-panel-icons {
     display: inline-block;
     transform: none;
 }
 
-.title-panel{
+.title-panel {
     writing-mode: vertical-rl;
     transform: rotate(180deg);
 }
@@ -133,7 +128,6 @@ h2, h3, p {
     width: 100%;
     min-height: 100vh;
     background-image: url(./images/theatre.jpeg);
-    /* background-color: tomato; */
     background-size: cover;
     display: flex;
     flex-direction: column;
@@ -173,7 +167,6 @@ h2, h3, p {
     text-decoration: none;
     transition: background-color .2s linear;
     margin-top: 40px;
-    /* border: 2px solid #ffffff; */
 }
 
 .button:hover {
@@ -194,7 +187,6 @@ h2, h3, p {
     padding: 80px 0;
     background-color: #333333;
     color: #ffffff;
-    /* letter-spacing: 1.2px; */
 }
 
 .section__header {
@@ -209,7 +201,6 @@ h2, h3, p {
 
 .section__main {
     width: 100%;
-    /* max-width: 445px; */
 }
 
 .section__main.center {
@@ -254,11 +245,21 @@ h2, h3, p {
     flex-direction: row;
 }
 
-.lens{
-    vertical-align: middle;
+.lens__image {
+    position: relative;
 }
 
-.section__container.four{
+.lens {
+    /* vertical-align: middle; */
+    /* width: 100%; */
+    position: absolute;
+    top: 50%;
+    left: 0;
+    z-index: 2;
+    transform: translate3d(0, -50%, 0);
+}
+
+.section__container.four {
     width: 100%;
     max-width: 1100px;
     display: flex;
