--- a/part2/land-style.css
+++ b/part2/land-style.css
@@ -12,6 +12,16 @@ h2, h3 {
     font-weight: 300;
 }
 
+textarea {
+    resize: none;
+    overflow: auto;
+}
+
+input {
+    text-decoration: none;
+    border: none;
+}
+
 /* Container */
 
 .container {
@@ -227,7 +237,7 @@ h2, h3 {
     text-transform: uppercase;
     font-size: 35px;
     font-weight: 300;
-    padding-bottom: 15px;
+    padding-bottom: 20px;
 }
 
 .section__main {
@@ -373,10 +383,96 @@ h2, h3 {
     padding-right: 25px;
 }
 
+.section__container.rating {
+    align-items: center;
+}
+
 .section__container-rating.about {
     font-size: 36px;
     font-weight: 700;
     max-width: 540px;
     letter-spacing: 1.5px;
     cursor: default;
+}
+
+/* Five section */
+
+.section__container__partner {
+    display: flex;
+    flex-direction: row;
+    max-width: 1100px;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.logo-img {
+    padding: 15px;
+}
+
+/* Sixth section */
+
+.h3__contact {
+    text-transform: uppercase;
+    font-size: 16px;
+    font-weight: 700;
+    letter-spacing: 1.5px;
+    padding: 10px;
+}
+
+.safety-text {
+    font-size: 12px;
+    font-weight: 300;
+    letter-spacing: 2px;
+}
+
+/* Contacts section */
+
+.section__container.contacts {}
+
+.contacts-phone {
+    width: max-content;
+}
+
+.application-form {
+    flex-grow: 1;
+}
+
+.contacts-form {
+    display: flex;
+    flex-direction: row;
+}
+
+.contacts-form-inputs {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+}
+
+.contacts-form-inputs .textarea {
+    width: 100%;
+    height: 100%;
+}
+
+.textarea, .input-text {
+    margin: 10px;
+    padding: 15px;
+    background-color: rgba(68, 68, 68, 1);
+    border: 1px solid #616161;
+    font-size: 13px;
+    font-weight: 700;
+    letter-spacing: 1.5px;
+    color: rgba(152, 152, 152, 1);
+}
+
+.bottom-container{
+    display: flex;
+    align-items: baseline;
+}
+
+.safety-text{
+    margin-right: 150px;
+}
+
+.bottom-container .button{
+    margin: 0;
 }
