--- a/part2/land-style.css
+++ b/part2/land-style.css
@@ -1,14 +1,21 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300;700&display=swap');
+
 * {
     font-family: 'Open Sans', 'sans-serif', 'Open Sans Condensed';
     box-sizing: border-box;
 }
 
-body, img, h2, h3, p {
+body,
+img,
+h2,
+h3,
+p {
     margin: 0;
 }
 
-h2, h3, p {
+h2,
+h3,
+p {
     font-weight: 300;
 }
 
@@ -92,7 +99,7 @@ h2, h3, p {
     position: fixed;
     padding: 70px;
     background: rgb(0 0 0 / 0.3);
-    height: 100%;
+    min-height: 100%;
     width: 80px;
 }
 
@@ -119,6 +126,7 @@ h2, h3, p {
     width: 26px;
     height: 26px;
     background-repeat: no-repeat;
+    background-position: center ;
 }
 
 .fixed-panel-icon.instagram {
@@ -270,16 +278,30 @@ h2, h3, p {
 .projects__slider {
     margin: auto;
     width: 100%;
-    max-width: 1770px;
+    max-width: 1620px;
     padding: 0;
     display: flex;
     flex-direction: row;
     cursor: default;
+    overflow: auto;
 
 }
 
 .projects__item {
     position: relative;
+}
+
+.projects__item:after{
+    content: '';
+    position: absolute;
+    z-index: 50;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background-color: #000000;
+    opacity: 0.65;
+    transition: opacity .1s ease;
 }
 
 .projects__item-name {
@@ -292,29 +314,8 @@ h2, h3, p {
     left: 0;
     margin: 40px;
     cursor: default;
-    transition: opacity .1s linear;
-
-}
-
-.projects__item-image {
-    opacity: 0.5;
-    transition: opacity .1s linear;
-}
-
-.projects__item:hover .projects__item-image {
-    opacity: 1;
-}
-
-.projects__item:hover .lens{
-    opacity: 1;
-}
-
-.projects__item:hover .projects__item-date{
-    opacity: 0;
-}
-
-.projects__item:hover .projects__item-name{
-    opacity: 0;
+    transition: opacity .1s ease;
+    z-index: 51;
 }
 
 .projects__item-date {
@@ -329,9 +330,36 @@ h2, h3, p {
     margin: 40px;
     writing-mode: vertical-lr;
     cursor: default;
-    transition: opacity .1s linear;
+    transition: opacity .1s ease;
+    z-index: 51;
     /* opacity: 1; */
 }
+
+.projects__item-image {
+    /* opacity: 0.5; */
+    /* transition: opacity .1s linear; */
+}
+
+/* .projects__item:hover .projects__item-image {
+    opacity: 1;
+} */
+
+.projects__item:hover:after {
+    opacity: 0;
+}
+
+.projects__item:hover .lens {
+    opacity: 1;
+}
+
+.projects__item:hover .projects__item-date {
+    opacity: 0;
+}
+
+.projects__item:hover .projects__item-name {
+    opacity: 0;
+}
+
 
 .lens {
     position: absolute;
@@ -351,11 +379,11 @@ h2, h3, p {
     max-width: 1100px;
     display: flex;
     margin: 0;
+    justify-content: center;
     align-items: center;
     position: relative;
 }
 
-.container__stars{
+.container__stars {
     position: absolute;
 }
-
