--- a/part3/style.css
+++ b/part3/style.css
@@ -1,47 +1,203 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Major+Mono+Display&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');
 * {
     font-family: 'Raleway', sans-serif;
     box-sizing: border-box;
 }
 
-*:before, *:after{
+*:before, *:after {
     box-sizing: border-box;
 }
 
-h1,h2,h3,h4{
+body {
+    background-color: rgba(36, 43, 51, 1);
+    color: #ffffff;
+    cursor: default;
+}
+
+h1, h2, h3, h4 {
     margin: 0;
 }
 
-.container{
+a {
+    text-decoration: none;
+    color: white;
+}
+
+.container {
     width: 100%;
     max-width: 1100px;
     margin: 0 auto;
 }
 
-.header{
-    width: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    z-index: 100;
+.container__title {
+    font-family: 'Playfair Display', serif;
+    font-size: 36px;
+    color: #D4C17F;
+    margin: 30px 0 30px 0;
 }
 
-.header__logo{
+.header {
+    width: 100%;
+}
+
+.header__logo.logo {
     font-family: 'Major Mono Display', monospace;
     font-size: 36px;
     color: #ffffff;
 }
 
-.header__logo.text{
-    
+.header__logo.text {
+    font-size: 20px;
+    color: white;
 }
 
-.intro{
+.header__inner {
+    padding-top: 30px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: baseline;
+}
+
+.header__logo {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.header__menu {
+    max-width: 540px;
+    cursor: pointer;
+}
+
+.header__menu a {
+    margin-right: 20px;
+    font-size: 14px;
+    transition: color .3s ease;
+}
+
+.header__menu a:hover {
+    color: rgba(212, 193, 127, 1);
+}
+
+.intro {
     width: 100%;
     height: 100vh;
-
     background: url(./images/background.jpg) center no-repeat;
     background-size: cover;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
+
+.intro__title {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+}
+
+.intro__text {
+    font-family: 'Playfair Display', serif;
+    font-size: 42px;
+    color: rgba(212, 193, 127, 1);
+    margin: 0;
+    max-width: 555px;
+    text-align: center;
+}
+
+.inner__mouse {
+    margin-top: 70px;
+}
+
+.intro__footer {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    padding-top: 80px;
+}
+
+.intro__footer .adress, .intro__footer .phone {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 100px;
+}
+
+.footer__placeholder, .footer__phone {
+    margin-right: 20px;
+    cursor: pointer;
+}
+
+.intro__footer .adress {
+    padding-right: 60px;
+}
+
+.footer__text {
+    font-size: 18px;
+    color: #ffffff;
+    cursor: pointer;
+}
+
+.second .container {
+    max-width: 795px;
+}
+
+.testimonials {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin: 70px 0 70px 0;
+}
+
+.testimonials-box {
+    max-width: 195px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+}
+
+.testimonials-box .ico {
+    margin: 20px;
+}
+
+.container__apartments {
+    display: flex;    
+    flex-wrap: wrap;
+    margin-top: 50px;
+}
+
+.apartment{
+    position: relative;
+}
+
+.apartment-image{
+    margin: 15px 15px 0 0;
+}
+
+.apartment-title{
+    position: absolute;
+    bottom: 60px;
+    left: 60px;
+    font-size: 20px;
+}
+
+.fourth{
+    margin: 100px 0 70px 0;
+}
+
+.container__cta{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.cta-text{
+    max-width: 535px;
+    line-height: 24px;
+    font-size: 16.5px;
+    text-align: left;
+}
+
+.
