--- a/part3/style.css
+++ b/part3/style.css
@@ -29,6 +29,7 @@ a {
     width: 100%;
     max-width: 1100px;
     margin: 0 auto;
+    padding: 30px 0 30px 0;
 }
 
 .container__title {
@@ -163,41 +164,172 @@ a {
 }
 
 .container__apartments {
-    display: flex;    
+    display: flex;
     flex-wrap: wrap;
     margin-top: 50px;
 }
 
-.apartment{
+.apartment {
     position: relative;
 }
 
-.apartment-image{
+.apartment-image {
     margin: 15px 15px 0 0;
 }
 
-.apartment-title{
+.apartment-title {
     position: absolute;
     bottom: 60px;
     left: 60px;
     font-size: 20px;
 }
 
-.fourth{
+.fourth {
     margin: 100px 0 70px 0;
 }
 
-.container__cta{
+.container__cta {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
 }
 
-.cta-text{
+.cta-text {
     max-width: 535px;
     line-height: 24px;
     font-size: 16.5px;
     text-align: left;
 }
 
-.
+.cta__form {
+    display: flex;
+    flex-direction: column;
+}
+
+.input-cta, .feedback-cta {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.input-name, .input-phone, .cta__button, .cta__safety-text {
+    width: 255px;
+    height: 50px;
+    margin: 10px;
+}
+
+.input-name, .input-phone {
+    background: #ffffff31;
+    color: #ffffff;
+    font-size: 14px;
+    border: none;
+}
+
+.cta__button {
+    background-color: rgba(212, 193, 127, 1);
+    border: none;
+    text-align: center;
+    margin: 0;
+    color: #ffffff;
+    transition: background-color .3s ease;
+}
+
+.cta__button:hover {
+    background-color: rgb(194, 168, 76);
+}
+
+.cta__safety-text {
+    font-size: 13px;
+    text-align: center;
+}
+
+.map {
+    width: 1110px;
+    height: 360px;
+    /* background-color: #959595; */
+    margin: 15px;
+}
+
+.question__form {
+    padding: 15px 0 15px 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.footer {
+    background-color: #2D343C;
+    width: 100%;
+    height: 275px;
+    padding: 40px 0 40px 0;
+}
+
+.footer__container {
+    display: flex;
+    flex-direction: row;
+    /* flex-wrap: 1; */
+    justify-content: space-between;
+}
+
+.footer__logo.logo {
+    font-family: 'Major Mono Display', monospace;
+    font-size: 36px;
+    color: #ffffff;
+}
+
+.footer__logo.text {
+    font-size: 20px;
+    color: white;
+    text-align: center;
+}
+
+.footer__menu, .footer__info {
+    font-size: 14px;
+    display: flex;
+    flex-direction: column;
+}
+
+.footer__menu a, .footer__info .info {
+    margin: 10px 0 10px 0;
+}
+
+.footer__icons {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    height: 50px;
+    width: auto;
+}
+
+.footer__ico.vk {
+    background-image: url(./images/vk.svg);
+}
+
+.footer__ico.vk:hover {
+    background-image: url(./images/vk-active.svg);
+}
+
+.footer__ico.youtube {
+    background-image: url(./images/youtube.svg);
+}
+
+.footer__ico.youtube:hover {
+    background-image: url(./images/youtube-active.svg);
+}
+
+.footer__ico.fb {
+    background-image: url(./images/facebook-logo.svg);
+}
+
+.footer__ico.fb:hover {
+    background-image: url(./images/facebook-logo-active.svg);
+}
+
+.footer__ico.ig {
+    background-image: url(./images/instagram.svg);
+}
+
+.footer__ico.ig:hover {
+    background-image: url(./images/instagram-active.svg);
+}
